# ocpi-playground

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: python-app.yml
env.d/: cpo  emsp
src/: Dockerfile  logging-config.yaml  pyproject.toml
src/playground/: __init__.py  api.py  conf.py  factories.py
src/tests/: test_factories.py
